added moonface icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>My profile</title>
+  <link rel="icon" type="image/png" href="images/emoji.png"/>
   <script src="https://kit.fontawesome.com/11328c680f.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
